upgraded syntax from tika docs, updated README